--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,10 +21,10 @@
     },
     "homepage":{
         "why_choose_us":"WHY CHOOSE US",
-        "best_logistic":"Best Logistic",
-        "best_quality":"Best Quality",
-        "best_products":"Best Products",
-        "best_seeds":"Best Seeds",
+        "exceptional_customer_service":"Exceptional Customer Service",
+        "best_quality":"Quality",
+        "best_products":"Products",
+        "reliable":"Reliable",
         "read_more":"Read More",
         "our_aim":"Our Aim",
         "our_offering":"Our Offering",
@@ -32,11 +32,21 @@
         "our_aim_description":"To connect rural farms with the nearby areas so that both the farmers and consumers get benefitted leading to their mutual benefit.",
         "our_offering_description":"Best quality products straight from farm to consumer so that you never need to question freshness of food you. are eating.",
         "our_prize_description":"Nothing makes us more happy than seeing farmer of our country grow, pave a way to their economical development leading to developing India.",
-        "what_our_clients_say":"WHAT OUR CLIENTS SAY",
-        "best_logistic_description":"Best Logistic",
+        "what_our_clients_say":"WORDS THAT MATTER",
+        "exceptional_customer_service_description":"We think providing exceptional customer service is our main strength. We take pride in providing outstanding services to our customers. We know that our customers are important for us and hence we do not leave any stone unturned in helping, guiding and providing the best possible product and support to our customers.",
         "best_quality_description":"We believe quality is vital for success. Quality is all about improving products, services, systems and processes, to making sure that the whole platform is fit and effective. We work for the satisfaction of the customer for that we ensure quality.",
         "best_products_description":"The color, flavor, texture, and the nutritional value of fresh-cut fruit and vegetable products are factors critical to consumer acceptance and the success of the products.",
-        "best_seeds_description":"qwerty"
+        "reliable_description":" No false promises or sales hype. We do and deliver what we say, on-time, on-budget. We are professional and easy to work with.",
+        "words_that_matter_description1":"We should not forget what was the state of grain production in the country after attaining independence. Our “annadata” has brought us out of the crisis. The country today has a record grain production, record dal, fruit, vegetables and milk production.",
+        "words_that_matter_description2":"The diet, to be healthy, has to be mostly fruits, vegetables, beans, nuts and seeds.",
+        "words_that_matter_description3":"Cultivators of the Earth are the most virtuous and independent citizens.",
+        "words_that_matter_1":"Narendra Modi",
+        "words_that_matter_2":"Joel Fuhrman",
+        "words_that_matter_3":"Thomas Jefferson",
+        "words_that_matter_position1":", Prime Minister of India",
+        "words_that_matter_position2":", American celebrity doctor",
+        "words_that_matter_position3":", 3rd President of the United States"
+
     },
     "header":{
         "home":"Home",
