--- a/src/assets/i18n/hn.json
+++ b/src/assets/i18n/hn.json
@@ -44,7 +44,16 @@
         "exceptional_customer_service_description":"हमें लगता है कि असाधारण ग्राहक सेवा प्रदान करना हमारी मुख्य ताकत है। हम अपने ग्राहकों को उत्कृष्ट सेवाएं प्रदान करने में गर्व महसूस करते हैं। हम जानते हैं कि हमारे ग्राहक हमारे लिए महत्वपूर्ण हैं और इसलिए हम अपने ग्राहकों को सर्वोत्तम संभव उत्पाद और समर्थन प्रदान करने, मार्गदर्शन करने और प्रदान करने में कोई भी पत्थर नहीं छोड़ते हैं।",
         "best_quality_description":"हमें विश्वास है कि गुणवत्ता सफलता के लिए महत्वपूर्ण है। यह सुनिश्चित करने के लिए कि संपूर्ण प्लेटफॉर्म फिट और प्रभावी है, गुणवत्ता, उत्पादों, सेवाओं, प्रणालियों और प्रक्रियाओं में सुधार के बारे में है। हम ग्राहक की संतुष्टि के लिए काम करते हैं ताकि हम गुणवत्ता सुनिश्चित कर सकें।",
         "best_products_description":"ताजा कटौती फल और सब्जी उत्पादों का रंग, स्वाद, बनावट, और पौष्टिक मूल्य उपभोक्ता स्वीकृति और उत्पादों की सफलता के लिए महत्वपूर्ण कारक हैं।",
-        "reliable_description":"कोई झूठा वादा या बिक्री प्रचार नहीं। हम समय-समय पर बजट पर जो करते हैं, हम करते हैं और वितरित करते हैं। हम पेशेवर और काम करने में आसान हैं।"
+        "reliable_description":"कोई झूठा वादा या बिक्री प्रचार नहीं। हम समय-समय पर बजट पर जो करते हैं, हम करते हैं और वितरित करते हैं। हम पेशेवर और काम करने में आसान हैं।",
+        "words_that_matter_description1":"स्वतंत्रता प्राप्त करने के बाद हमें देश में अनाज उत्पादन की स्थिति क्या नहीं भूलनी चाहिए। हमारे 'अन्नदाता' ने हमें संकट से बाहर लाया है। देश में आज एक रिकॉर्ड अनाज उत्पादन, रिकॉर्ड दाल, फल, सब्जियां और दूध उत्पादन है।",
+        "words_that_matter_description2":"स्वस्थ होने के लिए आहार, ज्यादातर फल, सब्जियां, सेम, नट और बीज होना चाहिए।",
+        "words_that_matter_description3":"पृथ्वी के खेती सबसे गुणकारी और स्वतंत्र नागरिक हैं।",
+        "words_that_matter_1":"नरेंद्र मोदी",
+        "words_that_matter_2":"जोएल फहरमैन",
+        "words_that_matter_3":"थॉमस जेफरसन",
+        "words_that_matter_position1":", भारत के प्रधान मंत्री",
+        "words_that_matter_position2":", अमेरिकी सेलिब्रिटी डॉक्टर",
+        "words_that_matter_position3":", संयुक्त राज्य अमेरिका के तीसरे राष्ट्रपति"
     },
     "header":{
         "home":"होम",
