--- a/src/assets/i18n/hn.json
+++ b/src/assets/i18n/hn.json
@@ -22,7 +22,7 @@
         "next":"आगामी",
         "welcome":"स्वागत",
         "about":"",
-        "about_description":"परियोजना किसान की डुकान (केकेडी) प्रवृत्ति का प्रक्षेपण है जो माल वितरित करने पर केंद्रित है सीधे खेत से ग्राहक को। </ p> <p> जैसा कि हम जानते हैं, यह ताजा नहीं है अगर यह खेत से नहीं है। और इसलिए, ग्राहक को मंच प्रदान करके एक ऑनलाइन दृष्टिकोण लागू किया जा रहा है और किसान जहां किसान मिल सकते हैं और सही ग्राहकों के संपर्क में आ सकते हैं अपने सामान बेचते हैं और इसी तरह से ग्राहकों को माल के लिए अनुरोध कर सकते हैं किसान स्थान या मूल्य की अपनी प्राथमिकताओं के आधार पर और गुणवत्ता वाले कच्चे माल का लाभ उठाते हैं उनके उपयोग के लिए।",
+        "about_description":"परियोजना किसान की डुकान (केकेडी) प्रवृत्ति का प्रक्षेपण है जो माल वितरित करने पर केंद्रित है सीधे खेत से ग्राहक को। जैसा कि हम जानते हैं, यह ताजा नहीं है अगर यह खेत से नहीं है। और इसलिए, ग्राहक को मंच प्रदान करके एक ऑनलाइन दृष्टिकोण लागू किया जा रहा है और किसान जहां किसान मिल सकते हैं और सही ग्राहकों के संपर्क में आ सकते हैं अपने सामान बेचते हैं और इसी तरह से ग्राहकों को माल के लिए अनुरोध कर सकते हैं किसान स्थान या मूल्य की अपनी प्राथमिकताओं के आधार पर और गुणवत्ता वाले कच्चे माल का लाभ उठाते हैं उनके उपयोग के लिए।",
         "farmer_joined":"किसान शामिल",
         "kg_vegetables_sold":"केजी सब्जी बेच दिया",
         "happy_customers":"मुबारक ग्राहक"
