changes in json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -287,22 +287,13 @@
     "farmer_add_product":{
         "upload_product":"UPLOAD PRODUCT",
         "choose_product_name":"Choose the product name",
-        "onion":"Onion",
-        "tomato":"Tomato",
-        "brinjal":"Brinjal",
-        "cauliflower":"Cauliflower",
-        "carrot":"Carrot",
-        "garlic":"Garlic",
-        "lady_finger":"Ladyfinger",
-        "orange":"Orange",
-        "lemon":"Lemon",
         "product_description":"Prouct Description",
         "enter_description":"Enter the description",
         "description_required":"Description Required",
         "product_price_per_kg":"Product Price per KG",
         "enter_price":"Enter the price",
         "price_required":"Price is required",
-        "bulk_product_price_per_kg":"Bulk Product price pre KG",
+        "bulk_product_price_per_kg":"Bulk Product price per KG",
         "enter_bulk_order_price":"Enter the bulk order price",
         "bulk_price_required":"Bulk order price required",
         "quantity":"Quantity",
