modified tamil json file and test cases

--- a/src/assets/i18n/தமிழ்.json
+++ b/src/assets/i18n/தமிழ்.json
@@ -45,7 +45,7 @@
         "best_quality_description":"நம்முடைய வெற்றிக்கு  தரம் முக்கியம் என்று நாங்கள் நம்புகிறோம். தரம் என்பது பொருள்கள், அமைப்புகள் மற்றும் செயல்முறைகள் ஆகியவற்றை மேம்படுத்துவது, முழு மேடையும் பொருத்தமற்றதா மற்றும் பயனுள்ளதா என்பதை உறுதி செய்வது. வாடிக்கையாளரின் திருப்திக்கு நாம் தரத்தை உறுதி செய்கிறோம்.",
         "best_products_description":"வண்ணம், வாசனை, அமைப்பு மற்றும் புதிய வெட்டு பழம் மற்றும் காய்கறிப் பொருட்களின் ஊட்டச்சத்து மதிப்பு ஆகியவை நுகர்வோர் ஏற்றுமதியும், உற்பத்திகளின் வெற்றிக்குமான காரணிகள்.",
         "reliable_description":"தவறான வாக்குறுதிகளை அல்லது விற்பனை உயர்வு இல்லை. நாங்கள் என்ன செய்தாலும், நேரத்தோடு செய்கிறோம் , பட்ஜெட்டில் தருகிறோம்.நாங்கள் தொழில்முறை மற்றும் வேலை செய்ய எளிதானவர்கள்  ",
-        "words_that_matter_description1":"சுதந்திரம் அடைந்தவுடன்  நாட்டில் தானிய உற்பத்தியின் நிலை என்ன என்பதை நாம் மறந்துவிடக் கூடாது. நம் "அன்னதாதா " நெருக்கடியிலிருந்து நம்மை விடுவித்ததனர்.நாடு  இன்று தானிய உற்பத்தி, பருப்பு, பழங்கள், காய்கறிகள் மற்றும் பால் உற்பத்தியில் சாதனை படைத்துள்ளது .",
+        "words_that_matter_description1":"சுதந்திரம் அடைந்தவுடன்  நாட்டில் தானிய உற்பத்தியின் நிலை என்ன என்பதை நாம் மறந்துவிடக் கூடாது. நம் (அன்னதாதா)  நெருக்கடியிலிருந்து நம்மை விடுவித்ததனர்.நாடு  இன்று தானிய உற்பத்தி, பருப்பு, பழங்கள், காய்கறிகள் மற்றும் பால் உற்பத்தியில் சாதனை படைத்துள்ளது .",
         "words_that_matter_description2":"உணவு, ஆரோக்கியமாக இருக்க வேண்டும் எனில், பெரும்பாலும் பழங்கள், காய்கறிகள், பீன்ஸ், கொட்டைகள் மற்றும் விதைகள் இருக்க வேண்டும்.",
         "words_that_matter_description3":"பூமியின் பயிர்ச்செய்கையாளர்கள் மிகவும் நன்னெறி மற்றும் சுதந்திரமான குடிமக்கள்.",
         "words_that_matter_1":"நரேந்திர மோடி ",
@@ -497,7 +497,7 @@
         "problem_statement_description2":"விவசாயிகளுக்கு விற்க ஒரு தளம் வேண்டும்.",
         "problem_statement_description3":"தங்கள் தயாரிப்புகளைத் தங்களின் விருப்பமான விலைக்கு விற்பதில்லை . வாடிக்கையாளர்கள் விவசாய உரிமையாளரிடமிருந்து பொருட்களைப் பெறுவதில்லை .",
         "project_definition":"திட்ட வரையறை",
-        "project_definition_description1":"திட்டம் "கிசான் கி டுகன் (KKD) "பண்ணையில் இருந்து வாடிக்கையாளருக்கு நேரடியாக பொருட்களை விநியோகிப்பதில் கவனம் செலுத்துகிறது.",
+        "project_definition_description1":"திட்டம் (கிசான் கி டுகன் (KKD)) பண்ணையில் இருந்து வாடிக்கையாளருக்கு நேரடியாக பொருட்களை விநியோகிப்பதில் கவனம் செலுத்துகிறது.",
         "project_definition_description2":"நமக்கு ஏற்கனவே தெரிந்தவாறு , அது பண்ணையில் இருந்து இல்லையென்றால் புதியது அல்ல.",
         "project_definition_description3":"KKD விவசாயிகள் தங்கள் விவசாயத்திலிருந்து நேரடியாக ஒவ்வொரு வாடிக்கையாளர்களிடமும் வியத்தகு அளவிலான வியாபாரத்தை வழங்குவதற்கான ஒரு இணையவழி போர்டல் ஆகும்.",
         "project_definition_description4":"வீட்டு",
