--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -45,7 +45,7 @@
         "best_quality_description":"We believe quality is vital for success. Quality is all about improving products, services, systems and processes, to making sure that the whole platform is fit and effective. We work for the satisfaction of the customer for that we ensure quality.",
         "best_products_description":"The color, flavor, texture, and the nutritional value of fresh-cut fruit and vegetable products are factors critical to consumer acceptance and the success of the products.",
         "reliable_description":" No false promises or sales hype. We do and deliver what we say, on-time, on-budget. We are professional and easy to work with.",
-        "words_that_matter_description1":"We should not forget what was the state of grain production in the country after attaining independence. Our “annadata” has brought us out of the crisis. The country today has a record grain production, record dal, fruit, vegetables and milk production.",
+        "words_that_matter_description1":"We should not forget what was the state of grain production in the country after attaining independence.",
         "words_that_matter_description2":"The diet, to be healthy, has to be mostly fruits, vegetables, beans, nuts and seeds.",
         "words_that_matter_description3":"Cultivators of the Earth are the most virtuous and independent citizens.",
         "words_that_matter_1":"Narendra Modi",
