--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -327,9 +327,9 @@
         "amount":"Amount",
         "validity_of_order":"Validity Of Order",
         "customer_mobileno":"Customer MobileNo",
-        "delivered":"Delivered",
-        "accept":"Accept",
-        "decline":"Decline",
+        "delivered":"DELIVERED",
+        "accept":"ACCEPT",
+        "decline":"DECLINE",
         "enter_delivery_info":"Enter Delivery Info",
         "enter_delivery_date_and_time":"Enter delivery date and time",
         "close":"Close",
@@ -456,7 +456,7 @@
         "enter_10_digit_mobile_number":"Enter your 10 digit mobile number",
         "password":"Password",
         "enter_your_password":"Enter your password",
-        "password_required":"Password is Required"       
+        "password_required":"Password is Required"
     },
     "customer_my_cart":{
         "your_cart":"Your Cart",
@@ -487,13 +487,13 @@
         "less_than_3_digits":"Less than 3 digits",
         "more_than_3_digits":"More than 3 digits",
         "cvv_is_required":"CVV is required",
-        "make_payment":"Make Payment"       
+        "make_payment":"Make Payment"
     },
     "about_us":{
         "about_us_heading":"ABOUT US",
         "problem_statement":"Problem Statement",
         "in_the_global_market":"In the Global Market",
-        "problem_statement_description1":"the actual price of the products is not prevalent in the supply chain.",   
+        "problem_statement_description1":"the actual price of the products is not prevalent in the supply chain.",
         "problem_statement_description2":"need of a platform for farmers to sell.",
         "problem_statement_description3":"their products at their convenient price. The customers do not get products from the farm owner.",
         "project_definition":"Project Definition",
@@ -509,7 +509,7 @@
         "stakeholders_description1":"Farmers: By connecting the farmers directly with their customer and eliminating the middleman, KKD will help them to generate a greater profit.",
         "stakeholders_description2":"Customers: The buyer will get their products directly from the farm. Hence they can be sure that the vegetables they are consuming are fresh and unadulterated.",
         "stakeholders_description3":" Product Owner: We as the product developers and owners will provide a platform for the farmers and the customers to interact.",
-        "scope_and_impact":"Scope and Impact", 
+        "scope_and_impact":"Scope and Impact",
         "scope":"Scope",
         "scope_description":"Small scale and large scale farmers",
         "scope_description1":"Consumers of products",
