--- a/src/assets/i18n/తెలుగు.json
+++ b/src/assets/i18n/తెలుగు.json
@@ -1,16 +1,18 @@
 {
     "footer":{
-        "get_started":"ప్రారంభించండి",
-               "about_us":"మా గురించి",
-              "policies":"విధానాలు",
+        "about_us":"మా గురించి",
+        "policies":"విధానాలు",
         "contact_us":"సంప్రదించండి",
-               "support":"మద్దతు",
+        "support":"మద్దతు",
         "help":"సహాయం",
-              "join_our_newsletter":"మా వార్తాలేఖలో చేరండి",
-        "connect_on_social":"మాతో సోషల్ లో కనెక్ట్ అవ్వండి",
-        "enter_your_email":"మీ ఇ-మెయిల్ను ఎంటర్ చెయ్యండి",
-        "subscribe":"సబ్స్క్రయిబ్",
-        "kisan_ki_dukan":"కిసాన్ కి దుకాణ్.అన్ని హక్కులూ ప్రత్యేకించుకోవడమైనది"
+        "kisan_ki_dukan":"కిసాన్ కి దుకాణ్.అన్ని హక్కులూ ప్రత్యేకించుకోవడమైనది",
+        "footer_description":"We are a young company always looking for new and creative ideas to help you with our products in your everyday work.",
+        "our_team":"Our Team",
+        "sapientrazorfish_Gurgaon":" SapientRazorfish,Gurgaon",
+        "phone":"Phone",
+        "email":"Email",
+        "skype":"Skype",
+        "follow_us":"Follow Us"
     },
     "body":{
         "kisan_ki_dukan":"కిసాన్ కి దుకాణ్",
@@ -20,7 +22,7 @@
         "previous":"మునుపటి",
         "next":"తరువాత",
         "welcome":"స్వాగతం",
-        "about":"గురించి",
+        "about":"About",
         "about_description":"ప్రాజెక్ట్ కిసాన్ కి దిక్కున్ (కెకెడి) వ్యవసాయం నుండి వినియోగదారునికి నేరుగా వస్తువులను పంపిణీ చేయడంపై దృష్టి పెడుతుంది. మనకు తెలుసు, పొలం నుండి కానిది ఏదైనా తాజా కాదు . అందువల్ల, కస్టమర్లకు, రైతులకు తమ వస్తువులను విక్రయించడానికి సరైన వినియోగదారులతో సన్నిహితంగా ఉండటానికి మరియు రైతులకు లభించే రైతులకు ఒక ప్లాట్ఫామ్ను అందించడం ద్వారా ఆన్లైన్ విధానం ఒక పద్ధతిగా అమలు చేయబడుతుంది మరియు అదేవిధంగా వినియోగదారులు రైతుల నుండి వస్తువుల కోసం అభ్యర్థించవచ్చు నగర లేదా ధరల వారి ప్రాధాన్యతలను బట్టి, వారి ఉపయోగం కోసం నాణ్యమైన ముడి సరుకులను ఉపయోగించుకుంటారు.",
         "Farmer_joined":"చేరిన రైతులు సంఖ్య",
         "kg_vegetables_sold":"అమ్మిన కూరగాయల కిలోల సంఖ్య",
