--- a/src/assets/i18n/తెలుగు.json
+++ b/src/assets/i18n/తెలుగు.json
@@ -2,7 +2,7 @@
     "footer":{
         "about_us":"మా గురించి",
         "policies":"విధానాలు",
-        "contact_us":"సంప్రదించండి",
+        "contact":"సంప్రదించండి",
         "support":"మద్దతు",
         "help":"సహాయం",
         "kisan_ki_dukan":"కిసాన్ కి దుకాణ్.అన్ని హక్కులూ ప్రత్యేకించుకోవడమైనది",
@@ -43,7 +43,6 @@
         "our_prize_description":"మా దేశానికి చెందిన రైతుని పెంచుకోవడమే మనందరికీ సంతోషం కలిగించదు, వారి ఆర్థిక అభివృద్ధికి భారతదేశం అభివృద్ధి చెందడానికి దారి తీస్తుంది.",
         "what_our_clients_say":"మా కస్టమర్స్ చెప్పేది",
          "exceptional_customer_service_description":"అసాధారణమైన కస్టమర్ సేవను అందించడం మా ప్రధాన బలం అని మేము భావిస్తున్నాము. మా వినియోగదారులకు అత్యుత్తమ సేవలను అందించడంలో మేము గర్వం పొందుతాము. మా కస్టమర్లకు మాకు ముఖ్యమైనవని మాకు తెలుసు మరియు అందుచేత మేము మా వినియోగదారులకు ఉత్తమమైన ఉత్పత్తిని మరియు మద్దతును అందించడంలో మరియు సహాయం అందించడంలో ఏ రాయిని అయినా వదిలిపెట్టాము.",
-
         "best_quality_description":"విజయానికి నాణ్యత చాలా ముఖ్యమైనది అని మేము నమ్ముతున్నాము. నాణ్యత అనగా అత్యుత్తమమైన ఉత్పత్తులు మరియు సేవలు అందించడం.కస్టమర్ యొక్క సంతృప్తి యే మా ముఖ్య లక్ష్యం. ",
         "best_products_description":"రంగు, రుచి, ఆకృతి మరియు తాజా-కట్ పండు మరియు కూరగాయల ఉత్పత్తుల పోషక విలువ వినియోగదారుల అంగీకారం మరియు ఉత్పత్తుల విజయానికి కీలకం.",
         "reliable_description":" మేము ఏది చేస్తామో అదే చెప్తాము, అనిశ్చిత వాగ్దానాలు చెయ్యము.సమయపాలన మరియు ప్రొఫషనలిజం మా ప్రత్యేకతలు.",
