--- a/src/assets/i18n/ਪੰਜਾਬੀ.json
+++ b/src/assets/i18n/ਪੰਜਾਬੀ.json
@@ -29,7 +29,7 @@
         "happy_customers":"ਖੁਸ਼ ਗਾਹਕ"
     },
     "homepage":{
-        "why_choose_us":"ਅਸੀਂ ਕਿਉਂ ਚੁਣੀਏ",
+        "why_choose_us":"ਸਾਨੂੰ ਕਿਉਂ ਚੁਣੋ",
         "exceptional_customer_service":"ਬੇਮਿਸਾਲ ਗਾਹਕ ਸੇਵਾ",
         "best_quality":"ਗੁਣਵੱਤਾ",
         "best_products":"ਉਤਪਾਦ",
