--- a/src/assets/i18n/हिंदी.json
+++ b/src/assets/i18n/हिंदी.json
@@ -298,12 +298,19 @@
         "mobile_number_required":"मोबाइल नंबर की आवश्यकता है",
         "update":"अद्यतन करें"
     },
-    "delete_profile":{
+    "farmer_delete_profile":{
         "delete_profile":"प्रोफ़ाइल हटाएं",
         "enter_password":"पास वर्ड दर्ज करें",
         "enter_current_password":"वर्तमान पासवर्ड डालें",
         "current_password_required":"वर्तमान पासवर्ड आवश्यक है",
-        "delete":"हटाना"
+        "delete":"हटाना",
+        "enter_otp":"Enter OTP",
+        "otp_is_required":"OTP is required",
+        "less_then_10_digit":"less then 10 digit",
+        "more_then_10_digit":"more then 10 digit",
+        "mobile_number_is_required":"Mobile Number is required",
+        "verify_otp":"Verify otp",
+        "enter_mobile_number":"Enter Mobile Number"
     },
     "farmer_add_product":{
         "upload_product":"उत्पाद अपलोड करें",
