--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -346,7 +346,11 @@
         "ifsc_required":"IFSC Code is required",
         "more_than_6_characters_not_allowed":"More than 6 characters not allowed",
         "minimun_6_digits_are_required":"Minimum 6 digits are required",
-        "save_details":"Save Details"
+        "save_details":"Save Details",
+        "more_than_10_characters_not_allowed":"More than 6 characters not allowed",
+        "minimun_10_digits_are_required":"Minimum 6 digits are required",
+        "mobile_number":"Mobile Number",
+        "mobile_number_required":"Mobile number is required"
     },
     "farmer_current_order":{
         "customer_id":"Customer ID",
