--- a/src/assets/i18n/ਪੰਜਾਬੀ.json
+++ b/src/assets/i18n/ਪੰਜਾਬੀ.json
@@ -336,7 +336,11 @@
         "ifsc_required":"ਆਈਐਫਐਸਸੀ ਕੋਡ ਦੀ ਲੋੜ ਹੈ",
         "more_than_6_characters_not_allowed":"6 ਅੱਖਰਾਂ ਤੋਂ ਵੱਧ ਦੀ ਇਜਾਜ਼ਤ ਨਹੀਂ",
         "minimun_6_digits_are_required":"ਘੱਟੋ ਘੱਟ 6 ਅੰਕਾਂ ਦੀ ਲੋੜ ਹੁੰਦੀ ਹੈ",
-        "save_details":"ਵੇਰਵਾ ਸੁਰੱਖਿਅਤ ਕਰੋ"
+        "save_details":"ਵੇਰਵਾ ਸੁਰੱਖਿਅਤ ਕਰੋ",
+        "more_than_10_characters_not_allowed":"More than 6 characters not allowed",
+        "minimun_10_digits_are_required":"Minimum 6 digits are required",
+        "mobile_number":"Mobile Number",
+        "mobile_number_required":"Mobile number is required"
     },
     "farmer_current_order":{
         "customer_id":"ਗਾਹਕ ID",
