--- a/src/assets/i18n/தமிழ்.json
+++ b/src/assets/i18n/தமிழ்.json
@@ -336,7 +336,11 @@
         "ifsc_required":"IFSC எண் தேவைப்படுகிறது",
         "more_than_6_characters_not_allowed":"6 க்கும் மேற்பட்ட எழுத்துக்கள் அனுமதிக்கப்படாது",
         "minimun_6_digits_are_required":"குறைந்தபட்சம் 6 இலக்கங்கள் தேவைப்படுகின்றன",
-        "save_details":"விவரங்களைச் சேமிக்கவும்"
+        "save_details":"விவரங்களைச் சேமிக்கவும்",
+        "more_than_10_characters_not_allowed":"More than 6 characters not allowed",
+        "minimun_10_digits_are_required":"Minimum 6 digits are required",
+        "mobile_number":"Mobile Number",
+        "mobile_number_required":"Mobile number is required"
     },
     "farmer_current_order":{
         "customer_id":"வாடிக்கையாளர் அடையாள எண்",
