--- a/src/assets/i18n/తెలుగు.json
+++ b/src/assets/i18n/తెలుగు.json
@@ -336,7 +336,11 @@
         "ifsc_required":"IFSC కోడ్ అవసరం",
         "more_than_6_characters_not_allowed":"6 కంటే ఎక్కువ అక్షరాలు అనుమతించబడవు",
         "minimun_6_digits_are_required":"కనీస 6 అంకెలు అవసరం",
-        "save_details":"వివరాలు భద్రపరచండి"
+        "save_details":"వివరాలు భద్రపరచండి",
+        "more_than_10_characters_not_allowed":"More than 6 characters not allowed",
+        "minimun_10_digits_are_required":"Minimum 6 digits are required",
+        "mobile_number":"Mobile Number",
+        "mobile_number_required":"Mobile number is required"
     },
     "farmer_current_order":{
         "customer_id":"కస్టమర్ ఐడి",
